Changes after peer review

--- a/common/app/assets/stylesheets/module/external/_from-content-api.scss
+++ b/common/app/assets/stylesheets/module/external/_from-content-api.scss
@@ -88,7 +88,8 @@ figure {
     }
 
     &.img-extended {
-      margin: $baseline*4 0 $baseline*4 0;
+        margin-top: $baseline*4;
+        margin-bottom: $baseline*4;
     }
 }
 
