--- a/common/app/assets/stylesheets/module/_tag.scss
+++ b/common/app/assets/stylesheets/module/_tag.scss
@@ -1,7 +1,11 @@
 .profile {
-	padding: 0 $gutter $baseline*4 $gutter;
+  padding: 0 $gutter $baseline*4 $gutter;
 }
 
-	.profile-img {
-		margin: 5px 15px 5px 0;
-	}
+  .profile-img {
+    margin: 5px 15px 5px 0;
+  }
+
+  .profile-bio {
+    padding-top: 2px;
+  }
