Just one definition of the switches will do fine, thanks.

--- a/admin/app/views/switchboard.scala.html
+++ b/admin/app/views/switchboard.scala.html
@@ -1,4 +1,4 @@
-@(switches: Seq[Switch], env: String)
+@(switches: List[SwitchState], env: String)
 
 @admin_main("Switchboard", env, isAuthed = true) {
 <div class="row">
