--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -1,5 +1,5 @@
 @(page: MetaData)(implicit request: RequestHeader)
-@import CommonSwitches.SearchSwitch
+@import conf.Switches.SearchSwitch
 
 <header id="header" class="gs-container cf" role="banner" data-link-name="global navigation: header">
     <a href="/" id="logo" class="i i-guardian-logo" data-link-name="site logo">The Guardian</a>
