Simplify media queries, stop relying on media type

--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -7,7 +7,7 @@
     clear: both;
     margin: 58px auto 0;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         margin-top: 104px;
     }
 }
