--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -9,7 +9,7 @@
     position: relative;
     z-index: 1000;
     // We do not get desktop ads yet. Uncomment when needed.
-    // @media only screen and (min-width: $desktopAd) {
+    // @media (min-width: $desktopAd) {
     //     min-height: 96px;
     // }
 
