--- a/common/app/assets/stylesheets/module/_tabs.scss
+++ b/common/app/assets/stylesheets/module/_tabs.scss
@@ -37,7 +37,7 @@ $tabBorderWidth: 2px;
 
 
 
-@media screen and (max-width: 18.75em) {
+@media (max-width: 18.75em) {
     .tabs li a {
         font-size: 14px;
         font-size: 1.4rem;
