--- a/common/app/assets/stylesheets/module/nav/_control.scss
+++ b/common/app/assets/stylesheets/module/nav/_control.scss
@@ -51,7 +51,7 @@
     height: 28px;
     padding: 15px $gutter 15px 0;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         position: absolute;
         right: 0;
         top: 58px;
@@ -73,7 +73,7 @@ span.control__menu.i-menu {
     display: inline-block;
     margin-left: 6px;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         display: none;
     }
 }
@@ -81,14 +81,14 @@ span.control__menu.i-menu {
 .control--sections .i-menu-active {
     display: none;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         margin-top: $baseline*2;
         display: inline-block;
     }
 }
 
 .control--sections .i-nav-divider {
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         margin-right: $baseline*3;
         border-color: #BBBBBB;
         background-color: #ffffff;
@@ -113,7 +113,7 @@ span.control__menu.i-menu {
             color: $blue;
         }
 
-        @media only screen and (min-width: $tablet) {
+        @media (min-width: $tablet) {
             position: absolute;
             top: 0;
             right: 48px;
@@ -135,7 +135,7 @@ span.control__menu.i-menu {
     margin-right: $baseline*2;
     margin-left: $baseline*2;
 
-    @media only screen and (min-width: 26.25em) {
+    @media (min-width: 26.25em) {
         display: inline-block;
     }
 }
@@ -148,7 +148,7 @@ span.control__menu.i-menu {
 .control--topstories .i-top-stories {
     margin: 5px $baseline*4 0 $baseline*2;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         margin-left: 0;
     }
 }
@@ -168,7 +168,7 @@ span.control__menu.i-menu {
     padding: 15px $baseline*4 15px 0;
     border: none;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         position: absolute;
         top: 0;
         right: 0;
