--- a/common/app/assets/stylesheets/base/_helpers.scss
+++ b/common/app/assets/stylesheets/base/_helpers.scss
@@ -40,7 +40,7 @@
 }
 
 .mobile-only {
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         display: none !important;
     }
 }
