--- a/common/app/assets/stylesheets/components/pasteup/sass/layout/responsive-grid.scss
+++ b/common/app/assets/stylesheets/components/pasteup/sass/layout/responsive-grid.scss
@@ -57,7 +57,7 @@ $class-type:            unquote(".");
     padding-left: 3%;
 }
 // Set gutter width for 12 cols
-@media only screen and (min-width: 600px) {
+@media (min-width: 600px) {
     #{$class-type}grid {
         margin-left: -2%;
     }
@@ -128,10 +128,10 @@ $class-type:            unquote(".");
 @include device-type();
 
 // Specific breakpoint widths.
-@media only screen and (min-width: $medium-start) {
+@media (min-width: $medium-start) {
     @include device-type("medium-");
 }
 
-@media only screen and (min-width: $large-start) {
+@media (min-width: $large-start) {
     @include device-type("large-");
 }
