--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -18,7 +18,7 @@
 .nav-popup .nav--section-divider {
     padding-bottom: $baseline*4;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         margin: 0;
         border-top: none;
     }
@@ -30,7 +30,7 @@
 .nav-popup--small {
     padding-bottom: 0;
 
-    @media only screen and (min-width: $tablet) {
+    @media (min-width: $tablet) {
         position: absolute;
         top: 102px;
         right: 0;
@@ -43,7 +43,7 @@
     }
 
     .nav__item {
-        @media only screen and (min-width: $tablet) {
+        @media (min-width: $tablet) {
             margin: 0 $gutter;
             border-bottom: 1px solid $darkMushroom;
             text-align: right;
@@ -58,7 +58,7 @@
     .nav--columns .nav__link {
         @extend %type-7;
 
-        @media only screen and (min-width: $tablet) {
+        @media (min-width: $tablet) {
             color: #444444;
             padding: $baseline*3 0 $baseline*3 0;
             @include font($serifheadline, 200, 14, 14);
